Fix : Sidebar Collapse

--- a/src/assets/scss/layout/_sidebar.scss
+++ b/src/assets/scss/layout/_sidebar.scss
@@ -9,25 +9,26 @@
 
 #project-toggle {
     &~.sub-menu {
-        // display: none;
-        height: 0;
-        transition: all 0.4s ease-in-out;
+        max-height: 0;
+        transition: all 0.6s ease-in-out;
     }
 
     &:checked {
         &~.sub-menu {
-            // display: none;
-            height: 200px;
+            max-height: 500px;
             background: $body-bg-secondary;
             border-radius: 20px;
-            transition: all 0.4s ease-in-out;
+            transition: all 1s ease-in-out;
         }
-        &~.test .toggle-label{
+
+        &~.test .toggle-label {
             animation: rotation 0.4s 1 linear;
+
             @keyframes rotation {
                 from {
                     transform: rotate(0deg);
                 }
+
                 to {
                     transform: rotate(180deg);
                 }
